# BitTrickle

./: CMakeLists.txt  Client.cpp  README.md  client.py  server.py
Cpp_version/: Server.cpp
Cpp_version/hans_dir/: Client  Makefile
Cpp_version/server_dir/: Makefile  Server
src/C++/: Client  Client.cpp  Server  Server.cpp
src/Python/: client.py  server.py
test/Server/: server_bin  test_server.sh  test_server_cpp.sh
test/Users/hans/: test_client.sh  test_client_cpp.sh
test/Users/yoda/: client_bin  test_client.sh  test_client_cpp.sh
